# magni_robot

./: .gitignore  LICENSE  README.md  controllers.py  demo.py  demo_closed_loop.py  demo_follow.py  magni.xml  magni_sim.py  pyproject.toml  record.py  requirements.txt  scene.xml  scene_follow.xml
assets/: caster_wheel.stl  front_wheel.stl  magni_body.stl
assets/parts/: caster_wheel__0.stl  caster_wheel__1.stl  caster_wheel__2.stl  caster_wheel__3.stl  caster_wheel__4.stl  caster_wheel__5.stl  front_wheel__0.stl  front_wheel__1.stl  front_wheel__2.stl  magni_body__0.stl  magni_body__1.stl  magni_body__2.stl  magni_body__3.stl  magni_body__4.stl  magni_shell__0.stl  magni_shell__1.stl  magni_shell__10.stl  magni_shell__11.stl  magni_shell__12.stl  magni_shell__13.stl  magni_shell__14.stl  magni_shell__15.stl  magni_shell__16.stl  magni_shell__17.stl  magni_shell__18.stl  magni_shell__19.stl  magni_shell__2.stl  magni_shell__20.stl  magni_shell__21.stl  magni_shell__22.stl  magni_shell__3.stl  magni_shell__4.stl  magni_shell__5.stl  magni_shell__6.stl  magni_shell__7.stl  magni_shell__8.stl  magni_shell__9.stl  magni_tower__0.stl  magni_tower__1.stl  magni_tower__10.stl  (+41 more)
assets/sensors/: raspi_camera.stl  sonar_hc-sr04.stl  ur50_lidar.stl
tests/: test_model.py
