[project]
name = "magni-robot"
version = "0.1.0"
description = "MuJoCo simulation of the Ubiquity Robotics Magni differential-drive base"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "imageio>=2.30",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.uv]
package = false
